add a brief description

--- a/responsive-topbar/index.html
+++ b/responsive-topbar/index.html
@@ -123,5 +123,7 @@
 
     <h1>Responsive Top Bar Demo</h1>
 
+    <p>Basic top bar navigation menu with a responsive hamburger menu.</p>
+
   </body>
 </html>
