--- a/responsive-topbar-fixed/index.html
+++ b/responsive-topbar-fixed/index.html
@@ -6,14 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Responsive Top Bar Fixed</title>
+    <title>Responsive Top Bar</title>
+
+    <link rel="stylesheet" href="../common/normalize.css">
+    <link rel="stylesheet" href="../common/common.css">
 
     <style>
-      * {
-        margin: 0;
-        padding: 0;
-      }
-
       /* Because the navbar is fixed, BODY should generally have a margin to clear the nav bar. */
       body {
         margin-top: 80px;
@@ -36,10 +34,6 @@
         display: table;
       }
 
-      nav li, nav a {
-        line-height: 50px; /* Nav bar height */
-      }
-
       nav a {
         text-decoration: none;
       }
@@ -48,10 +42,14 @@
       .nav-title {
         float: left;
       }
-      .nav-title a {
-        display: block;
-        padding: 0.5em 1em;
-        background-color: #e0e0e0;
+      .nav-title img {
+        float: left;
+        padding: 10px;
+      }
+      .nav-title .text-link {
+        line-height: 50px;
+        display: inline-block;
+        padding: 0 1em;
       }
 
       /* Toggle button / hamburger menu */
@@ -59,15 +57,16 @@
         float: right;
       }
       .nav-toggle a {
+        line-height: 50px;
         display: block;
-        padding: 0.5em 1em;
-        background-color: #e0e0e0;
+        padding: 0 1em;
       }
 
       ul.nav-topnav {
         display: none;
+        margin: 0;
+        padding: 0;
         width: 100%;
-        list-style: none;
       }
 
       ul.nav-topnav.nav-revealed {
@@ -76,12 +75,12 @@
 
       ul.nav-topnav li {
         display: block;
-        background-color: #e0e0e0;
       }
 
       ul.nav-topnav li a {
+        line-height: 50px;
         display: block;
-        padding: 0.5em 1em;
+        padding: 0 1em;
       }
 
       /* Change 640px to whatever the nav breakpoint should be */
@@ -112,7 +111,8 @@
 
     <nav>
       <div class="nav-title">
-        <a href="#">Site Title</a>
+        <a class="logo-link" href="#"><img class="logo" src="../common/happy.png" alt="Logo"></a>
+        <a class="text-link" href="#">Site Title</a>
       </div>
       <div class="nav-toggle">
         <a href="javascript:void(0);" onclick="toggleNavMenu();">&#9776;</a>
@@ -132,7 +132,7 @@
 
     <h1>Responsive Top Bar Fixed Demo</h1>
 
-    <p>Same as the <a href="../responsive-topbar/index.html">responsive top bar</a>, but fixed to the top of the page.</p>
+    <p>Fixed top bar navigation menu with a responsive hamburger menu.</p>
 
   </body>
 </html>
