move logo and text closer together

--- a/responsive-topbar-fixed/index.html
+++ b/responsive-topbar-fixed/index.html
@@ -49,7 +49,7 @@
       .nav-title .text-link {
         line-height: 50px;
         display: inline-block;
-        padding: 0 1em;
+        padding: 0 1em 0 0;
       }
 
       /* Toggle button / hamburger menu */
