--- a/responsive-topbar/index.html
+++ b/responsive-topbar/index.html
@@ -40,7 +40,7 @@
       .nav-title .text-link {
         line-height: 50px;
         display: inline-block;
-        padding: 0 1em;
+        padding: 0 1em 0 0;
       }
 
       /* Toggle button / hamburger menu */
